Update_config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Let's talk about mental health
+title: "Let's talk about mental health"
 author: Dunja Ivezic
 email: ivezicdunja@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
