Update_confing.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,8 @@
 title: "Let's talk about mental health"
 author: Dunja Ivezic
 email: ivezicdunja@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  # Write an awesome description for your new site here. You can edit this
-  #line in _config.yml. It will appear in your document head meta (for
-  #Google search results) and in your feed.xml site description.
-  
-  Let's talk about mental health site talks about.. well, you guessed it mental health! So are you in?
+description: > Let's talk about mental health site talks about.. well, you guessed it mental health! 
+So are you in?
 
 # social links
 instagram_username: dunja_munjaa # DO NOT include the @ character, or else the build will fail!
