Update_confing.yml

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,6 @@ So are you in?
 # social links
 instagram_username: dunja_munjaa # DO NOT include the @ character, or else the build will fail!
 github_username:  Munjara24 # DO NOT include the @ character, or else the build will fail!
-
+facebook: Dunja Ivezic
 show_excerpts: true # set to false to remove excerpts on the homepage
 theme: minima
